--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -8,6 +8,12 @@
   <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
+   <!-- JaCoCo Properties -->
+   <jacoco.version>0.8.6</jacoco.version>
+   <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+   <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+   <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+   <sonar.language>java</sonar.language>  
   </properties>
   <name>my-app</name>
   <url>http://maven.apache.org</url>
@@ -18,5 +24,34 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jacoco</groupId> 
+      <artifactId>jacoco-maven-plugin</artifactId>
+      <version>0.8.6</version>
+    </dependency>
   </dependencies>
+  <build>
+    <plugins>
+       <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>${jacoco.version}</version>
+          <executions>
+              <execution>
+                  <id>jacoco-initialize</id>
+                  <goals>
+                      <goal>prepare-agent</goal>
+                  </goals>
+              </execution>
+              <execution>
+                  <id>jacoco-site</id>
+                  <phase>package</phase>
+                  <goals>
+                      <goal>report</goal>
+                  </goals>
+              </execution>
+          </executions>
+       </plugin>
+    <plugins>
+  <build>
 </project>
