--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -52,6 +52,6 @@
               </execution>
           </executions>
        </plugin>
-    <plugins>
-  <build>
+    </plugins>
+  </build>
 </project>
