--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -9,10 +9,10 @@
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <!-- JaCoCo Properties -->
-   <jacoco.version>0.8.6</jacoco.version>
+   <jacoco.version>0.8.7</jacoco.version>
    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-   <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+   <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
    <sonar.language>java</sonar.language>  
   </properties>
   <name>my-app</name>
@@ -27,7 +27,7 @@
     <dependency>
       <groupId>org.jacoco</groupId> 
       <artifactId>jacoco-maven-plugin</artifactId>
-      <version>0.8.6</version>
+      <version>0.8.7</version>
     </dependency>
   </dependencies>
   <build>
