--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -9,7 +9,7 @@
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <!-- JaCoCo Properties -->
-   <jacoco.version>0.8.7</jacoco.version>
+   <jacoco.version>0.8.11</jacoco.version>
    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
    <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
@@ -27,7 +27,7 @@
     <dependency>
       <groupId>org.jacoco</groupId> 
       <artifactId>jacoco-maven-plugin</artifactId>
-      <version>0.8.7</version>
+      <version>${jacoco.version}</version>
     </dependency>
   </dependencies>
   <build>
