--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -44,8 +44,8 @@
                   </goals>
               </execution>
               <execution>
-                  <id>jacoco-site</id>
-                  <phase>package</phase>
+                  <id>report</id>
+                  <!-- phase>package</phase> -->
                   <goals>
                       <goal>report</goal>
                   </goals>
